# NewtonSystem

./: .gitignore  CMakeLists.txt  chartview.cpp  main.cpp  mainwindow.cpp
src/: main.cpp
src/chart/: chart.cpp  chart.h
src/chartview/: chartview.cpp  chartview.h
src/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
